# ardupilot

./: CMakeLists.txt
Tools/scripts/: build_options.py  decode_devid.py
libraries/AP_Airspeed/: AP_Airspeed.cpp  AP_Airspeed.h  AP_Airspeed_ARDU.cpp  AP_Airspeed_ARDU.h  AP_Airspeed_Backend.h  AP_Airspeed_NMEA.h  AP_Airspeed_config.h  AP_Airspeed_two_MS5611.cpp  AP_Airspeed_two_MS5611.h
libraries/AP_HAL/: Device.h  UARTDriver.cpp
libraries/AP_HAL_ChibiOS/: UARTDriver.cpp
libraries/AP_HAL_ChibiOS/hwdef/include/: minimize_common.inc
libraries/AP_SerialManager/: AP_SerialManager.cpp
